--- a/A2/css/styles.css
+++ b/A2/css/styles.css
@@ -1,14 +1,48 @@
-#choropleth_map {
-	top:100px;
-	bottom: 100px; 
-	left: 100px;
-	right: 100px;
-	/*height: 1000px;
-	width: 800px;*/
+body *{
+    font-family: 'Open Sans', sans-serif;
 }
-#bar {
-    fill: steelblue;
+
+h1 {
+    font-weight: 900;
 }
-axis--x path {
-    display: none;
+
+body {
+    background-color: rgb(107, 114, 130);
+}
+
+.page {
+    width: 850px;
+    background-color: white;
+    margin: auto;
+    padding: 30px;
+    padding-top: 30px;
+    padding-bottom: 10px;
+    margin-top: 20px;
+    border-radius: 10px;
+}
+
+
+.vis-container {
+    width: 100%;
+}
+
+.description h2,
+h1 {
+	margin-top: 0px;
+}  
+
+.description-right {
+    padding-left: 20px;
+}
+
+.description-left {
+    padding-right: 20px;
+}
+
+.pure-g {
+    margin-bottom: 40px;
+}
+
+.small-font {
+    font-size: 14px;
 }
